--- a/2022/JavaScript/package.json
+++ b/2022/JavaScript/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "readline": "^1.3.0"
   }
 }
